--- a/manifest.json
+++ b/manifest.json
@@ -9,14 +9,14 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/youtube-pwa/icon-192.png",
+      "src": "/youtube-pwa/icon-192.jpg",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/jpg"
     },
     {
-      "src": "/youtube-pwa/icon-512.png",
+      "src": "/youtube-pwa/icon-512.jpg",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/jpg"
     }
   ],
   "share_target": {
